<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/name_text_head"
            style="@style/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_favorite_black_24dp"
            android:drawablePadding="5dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/point_text_head"
            style="@style/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_check_circle_black_24dp"
            android:gravity="right"
            android:text="@string/points"/>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_light">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shadow_75156"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/checkbox_question"
                    style="@style/question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="@string/checkbox_q1" />

                <CheckBox
                    android:id="@+id/checkbox_answer1"
                    style="@style/answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="40dp"
                    android:button="@drawable/checkbox_selector"
                    android:paddingLeft="10dp"
                    android:text="@string/checkbox_a11" />

                <CheckBox
                    android:id="@+id/checkbox_answer2"
                    style="@style/answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="40dp"
                    android:button="@drawable/checkbox_selector"
                    android:paddingLeft="10dp"
                    android:text="@string/checkbox_a12" />

                <CheckBox
                    android:id="@+id/checkbox_answer3"
                    style="@style/answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="40dp"
                    android:button="@drawable/checkbox_selector"
                    android:paddingLeft="10dp"
                    android:text="@string/checkbox_a13" />

                <Button
                    android:id="@+id/checkbox_button"
                    style="@style/button_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_text_next"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shadow_75156"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/radiobutton_question"
                    style="@style/question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="@string/radiobutton_q1" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radiobutton_answer1"
                        style="@style/answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="40dp"
                        android:button="@drawable/checkbox_selector"
                        android:paddingLeft="10dp"
                        android:text="@string/radiobutton_a11" />

                    <RadioButton
                        android:id="@+id/radiobutton_answer2"
                        style="@style/answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="40dp"
                        android:button="@drawable/checkbox_selector"
                        android:paddingLeft="10dp"
                        android:text="@string/radiobutton_a12" />

                    <RadioButton
                        android:id="@+id/radiobutton_answer3"
                        style="@style/answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="40dp"
                        android:button="@drawable/checkbox_selector"
                        android:paddingLeft="10dp"
                        android:text="@string/radiobutton_a13" />

                </RadioGroup>

                <Button
                    android:id="@+id/radiobutton_button"
                    style="@style/button_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_text_next"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shadow_75156"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/findCat_image"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:onClick="makeImageBigger"
                    android:src="@drawable/cat_owls2" />

                <TextView
                    android:id="@+id/findCat_question"
                    style="@style/question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/image_test" />

                <EditText
                    android:id="@+id/image_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="5"
                    android:inputType="number" />

            </LinearLayout>

            <Button
                android:id="@+id/showScore_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_bg"
                android:onClick="showMyScore"
                android:padding="15dp"
                android:text="@string/button_text_show_score"
                android:textColor="@color/primary_light" />

            <TextView
                android:id="@+id/final_score_text"
                style="@style/final_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"
                android:text="@string/final_score" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_bg"
                android:onClick="takePhoto"
                android:padding="10dp"
                android:text="@string/button_text_take_photo"
                android:textColor="@color/primary_light" />

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:background="@drawable/shadow_75156">

        <RelativeLayout
            android:id="@+id/certificate_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cat_owls2">

            <TextView
                android:id="@+id/name_text_image"
                style="@style/certificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/points_text_image"
                style="@style/certificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:text="@string/on_image_score" />

        </RelativeLayout>


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
